force-app/main/default/objects/Double_OptIn_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Key_Header_Tag__c</fullName>
        <label>API Key Header Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Key__c</fullName>
        <description>Holds api key of the Apigee system</description>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSandBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSandBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_Service_URL__c</fullName>
        <description>Holds Marketing cloud service URL</description>
        <label>MC Service URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password_Header_Tag__c</fullName>
        <label>Password Header Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Header_Tag__c</fullName>
        <label>Session Header Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shortcode__c</fullName>
        <label>Shortcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_Header_Tag__c</fullName>
        <description>Holds User Name header tag for JSON request</description>
        <label>Username Header Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Double OptIn Settings</label>
    <pluralLabel>Double_OptIn_Settings</pluralLabel>
</CustomObject>